<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/watchlistFragment"
        android:title="@string/watchlist"
        android:icon="@drawable/ic_watchlist"/>

    <item android:id="@+id/streamFragment"
        android:title="@string/stream"
        android:icon="@drawable/ic_stream"/>

    <item android:id="@+id/searchFragment"
        android:title="@string/search"
        android:icon="@drawable/ic_search"/>

    <item android:id="@+id/chatFragment"
        android:title="@string/chat"
        android:icon="@drawable/ic_chat"/>

    <item android:id="@+id/portfolioFragment"
        android:title="@string/portfolio"
        android:icon="@drawable/ic_portfolio"/>
</menu>