<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.login.LoginActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        tools:ignore="UnusedAttribute">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/masuk"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/gray_background"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/masuk_dengan_google"
                android:textColor="@color/black"
                android:textAllCaps="false"
                app:icon="@drawable/ic_google"
                app:iconTint="@null"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/masuk_dengan_facebook"
                android:textColor="@color/black"
                android:textAllCaps="false"
                app:icon="@drawable/ic_facebook"
                app:iconTint="@null"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/tvText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/atau"
                    android:textColor="@android:color/darker_gray"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toStartOf="@id/tvText"
                    android:background="@android:color/darker_gray"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@id/tvText"
                    android:background="@android:color/darker_gray"
                    />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUsername"
                    android:focusable="false"
                    android:background="@color/gray_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/green"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:background="@color/gray_background"
                    android:inputType="textPassword"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/lupa_password"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:layout_marginEnd="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:text="@string/login"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:textAllCaps="false"
                app:strokeColor="@color/green"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/masuk_dengan_fingerprint"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="32dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginEnd="4dp"
                    android:text="@string/belum_punya_akun"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daftar_sekarang"
                    android:textColor="@color/green"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>